--- a/STM32N6Example.ioc
+++ b/STM32N6Example.ioc
@@ -7,7 +7,7 @@ ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-Appli.IPs=CORTEX_M55_S,GPDMA1,GPIO,NVIC1\:I,HPDMA1,LINKEDLIST,RCC,SAU
+Appli.IPs=CORTEX_M55_S,GPDMA1,GPIO,NVIC1\:I,HPDMA1,LINKEDLIST,RCC,SAU,USART1
 Appli.Pins=PO1
 CAD.formats=
 CAD.pinconfig=
@@ -45,7 +45,7 @@ EXTMEM_MANAGER.RefParam_BOOT_enable=true
 EXTMEM_MANAGER.RefParam_MEMORY_1_ConfigType=EXTMEM_LINK_CONFIG_8LINES
 EXTMEM_MANAGER.RefParam_MEMORY_1_Instance=XSPI2
 ExtMemLoader.IPs=ETH1,GPIO,EXTMEM_MANAGER,EXTMEM_LOADER,RCC
-FSBL.IPs=GPDMA1\:I,HDP,RCC\:I,GPIO\:I,NVIC\:I,XSPIM,XSPI1,XSPI2,SDMMC2,USB1_OTG_HS,UCPD1,ADC1,ADC2,USB2_OTG_HS,DEBUG,USART1,CSI,I2C1,I2C2,MDF1,SAI1,HPDMA1\:I,LINKEDLIST,CORTEX_M55_FSBL,EXTMEM_MANAGER
+FSBL.IPs=GPDMA1\:I,HDP,RCC\:I,GPIO\:I,NVIC\:I,XSPIM,XSPI1,XSPI2,USB1_OTG_HS,UCPD1,ADC1,ADC2,USB2_OTG_HS,DEBUG,CSI,I2C1,I2C2,MDF1,SAI1,HPDMA1\:I,LINKEDLIST,CORTEX_M55_FSBL,EXTMEM_MANAGER
 FSBL.Pins=PC13
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -66,15 +66,14 @@ Mcu.IP1=CORTEX_M55_FSBL
 Mcu.IP10=RCC
 Mcu.IP11=RIF
 Mcu.IP12=SAI1
-Mcu.IP13=SDMMC2
-Mcu.IP14=UCPD1
-Mcu.IP15=USART1
-Mcu.IP16=USB1_OTG_HS
-Mcu.IP17=USB2_OTG_HS
-Mcu.IP18=XSPI1
-Mcu.IP19=XSPI2
+Mcu.IP13=UCPD1
+Mcu.IP14=USART1
+Mcu.IP15=USB1_OTG_HS
+Mcu.IP16=USB2_OTG_HS
+Mcu.IP17=XSPI1
+Mcu.IP18=XSPI2
+Mcu.IP19=XSPIM
 Mcu.IP2=CORTEX_M55_S
-Mcu.IP20=XSPIM
 Mcu.IP3=DEBUG
 Mcu.IP4=EXTMEM_MANAGER
 Mcu.IP5=I2C1
@@ -82,7 +81,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=MDF1
 Mcu.IP8=NVIC1
 Mcu.IP9=NVIC
-Mcu.IPNb=21
+Mcu.IPNb=20
 Mcu.Name=STM32N657X0HxQ
 Mcu.Package=VFBGA264
 Mcu.Pin0=PQ6
@@ -406,8 +405,6 @@ PB9.PinAttribute=Free
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label,PinAttribute
 PC0.GPIO_Label=SD_D2
-PC0.Locked=true
-PC0.Mode=SD_4_bits_Wide_bus
 PC0.PinAttribute=FSBL
 PC0.Signal=SDMMC2_D2
 PC1.GPIOParameters=GPIO_Label,PinAttribute
@@ -435,25 +432,18 @@ PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label,PinAttribute
 PC2.GPIO_Label=SD_CK
 PC2.Locked=true
-PC2.Mode=SD_4_bits_Wide_bus
 PC2.PinAttribute=FSBL
 PC2.Signal=SDMMC2_CK
 PC3.GPIOParameters=GPIO_Label,PinAttribute
 PC3.GPIO_Label=SD_CMD
-PC3.Locked=true
-PC3.Mode=SD_4_bits_Wide_bus
 PC3.PinAttribute=FSBL
 PC3.Signal=SDMMC2_CMD
 PC4.GPIOParameters=GPIO_Label,PinAttribute
 PC4.GPIO_Label=SD_D0
-PC4.Locked=true
-PC4.Mode=SD_4_bits_Wide_bus
 PC4.PinAttribute=FSBL
 PC4.Signal=SDMMC2_D0
 PC5.GPIOParameters=GPIO_Label,PinAttribute
 PC5.GPIO_Label=SD_D1
-PC5.Locked=true
-PC5.Mode=SD_4_bits_Wide_bus
 PC5.PinAttribute=FSBL
 PC5.Signal=SDMMC2_D1
 PC8.GPIOParameters=GPIO_Label,PinAttribute
@@ -547,21 +537,19 @@ PE3.PinAttribute=FSBL
 PE3.Signal=SAI1_SD_B
 PE4.GPIOParameters=GPIO_Label,PinAttribute
 PE4.GPIO_Label=SD_D3
-PE4.Locked=true
-PE4.Mode=SD_4_bits_Wide_bus
 PE4.PinAttribute=FSBL
 PE4.Signal=SDMMC2_D3
 PE5.GPIOParameters=GPIO_Label,PinAttribute
 PE5.GPIO_Label=VCP_TX
 PE5.Locked=true
 PE5.Mode=Asynchronous
-PE5.PinAttribute=FSBL
+PE5.PinAttribute=Appli
 PE5.Signal=USART1_TX
 PE6.GPIOParameters=GPIO_Label,PinAttribute
 PE6.GPIO_Label=VCP_RX
 PE6.Locked=true
 PE6.Mode=Asynchronous
-PE6.PinAttribute=FSBL
+PE6.PinAttribute=Appli
 PE6.Signal=USART1_RX
 PE7.GPIOParameters=PinAttribute
 PE7.Locked=true
@@ -1004,8 +992,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=TestSTM32N6V3.ioc
-ProjectManager.ProjectName=TestSTM32N6V3
+ProjectManager.ProjectFileName=STM32N6Example.ioc
+ProjectManager.ProjectName=STM32N6Example
 ProjectManager.ProjectStructure=FSBL\:FSBL\:true;Appli\:Appli\:true;ExtMemLoader\:ExtMemLoader\:false;
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=FSBL-0x800,Appli-0x800,ExtMemLoader-0x800
@@ -1254,9 +1242,8 @@ RIF.RIFAWARE.GPIO\ Feature\ PB8\ Cid=-
 RIF.RIFAWARE.GPIO\ Feature\ PB8\ Secure=false
 RIF.RIFAWARE.GPIO\ Feature\ PB9\ Cid=-
 RIF.RIFAWARE.GPIO\ Feature\ PB9\ Secure=false
-RIF.RIFAWARE.GPIO\ Feature\ PC0\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PC0\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PC0\ Secure=true
+RIF.RIFAWARE.GPIO\ Feature\ PC0\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PC0\ Secure=false
 RIF.RIFAWARE.GPIO\ Feature\ PC1\ Cid=1
 RIF.RIFAWARE.GPIO\ Feature\ PC1\ FSBL=true
 RIF.RIFAWARE.GPIO\ Feature\ PC1\ Secure=true
@@ -1269,18 +1256,14 @@ RIF.RIFAWARE.GPIO\ Feature\ PC12\ Secure=false
 RIF.RIFAWARE.GPIO\ Feature\ PC13\ Cid=1
 RIF.RIFAWARE.GPIO\ Feature\ PC13\ FSBL=true
 RIF.RIFAWARE.GPIO\ Feature\ PC13\ Secure=true
-RIF.RIFAWARE.GPIO\ Feature\ PC2\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PC2\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PC2\ Secure=true
-RIF.RIFAWARE.GPIO\ Feature\ PC3\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PC3\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PC3\ Secure=true
-RIF.RIFAWARE.GPIO\ Feature\ PC4\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PC4\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PC4\ Secure=true
-RIF.RIFAWARE.GPIO\ Feature\ PC5\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PC5\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PC5\ Secure=true
+RIF.RIFAWARE.GPIO\ Feature\ PC2\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PC2\ Secure=false
+RIF.RIFAWARE.GPIO\ Feature\ PC3\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PC3\ Secure=false
+RIF.RIFAWARE.GPIO\ Feature\ PC4\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PC4\ Secure=false
+RIF.RIFAWARE.GPIO\ Feature\ PC5\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PC5\ Secure=false
 RIF.RIFAWARE.GPIO\ Feature\ PC6\ Cid=-
 RIF.RIFAWARE.GPIO\ Feature\ PC6\ Secure=false
 RIF.RIFAWARE.GPIO\ Feature\ PC7\ Cid=-
@@ -1348,14 +1331,13 @@ RIF.RIFAWARE.GPIO\ Feature\ PE2\ Secure=true
 RIF.RIFAWARE.GPIO\ Feature\ PE3\ Cid=1
 RIF.RIFAWARE.GPIO\ Feature\ PE3\ FSBL=true
 RIF.RIFAWARE.GPIO\ Feature\ PE3\ Secure=true
-RIF.RIFAWARE.GPIO\ Feature\ PE4\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PE4\ FSBL=true
-RIF.RIFAWARE.GPIO\ Feature\ PE4\ Secure=true
+RIF.RIFAWARE.GPIO\ Feature\ PE4\ Cid=-
+RIF.RIFAWARE.GPIO\ Feature\ PE4\ Secure=false
+RIF.RIFAWARE.GPIO\ Feature\ PE5\ Appli=true
 RIF.RIFAWARE.GPIO\ Feature\ PE5\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PE5\ FSBL=true
 RIF.RIFAWARE.GPIO\ Feature\ PE5\ Secure=true
+RIF.RIFAWARE.GPIO\ Feature\ PE6\ Appli=true
 RIF.RIFAWARE.GPIO\ Feature\ PE6\ Cid=1
-RIF.RIFAWARE.GPIO\ Feature\ PE6\ FSBL=true
 RIF.RIFAWARE.GPIO\ Feature\ PE6\ Secure=true
 RIF.RIFAWARE.GPIO\ Feature\ PE7\ Cid=1
 RIF.RIFAWARE.GPIO\ Feature\ PE7\ FSBL=true
@@ -1760,7 +1742,7 @@ RIF.RIFAWARE.RTC\ Feature\ Timestamp\ protection\ Secure=false
 RIF.RIFAWARE.RTC\ Feature\ Wake-up\ timer\ protection\ Cid=-
 RIF.RIFAWARE.RTC\ Feature\ Wake-up\ timer\ protection\ Secure=false
 RIF.SDMMC1_CID_RIMU=0
-RIF.SDMMC2_CID_RIMU=1
+RIF.SDMMC2_CID_RIMU=0
 RIF.VENC_CID_RIMU=0
 RIF.default_config=false
 SAI1.ErrorAudioFreq-SAI_A_MasterWithClock=1.72 %
@@ -1787,8 +1769,7 @@ UCPD1_CC2.Locked=true
 UCPD1_CC2.Mode=Dual_Role_AllSignals
 UCPD1_CC2.PinAttribute=FSBL
 UCPD1_CC2.Signal=UCPD1_CC2
-USART1.IPParameters=VirtualMode,VirtualMode-Asynchronous
-USART1.VirtualMode=VM_ASYNC
+USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB2_OTG_HS.IPParameters=VirtualMode
 USB2_OTG_HS.VirtualMode=Host_HS
